@@ -1,5 +1,8 @@
 2003-02-06  Stefan Petersen  <spe@stacken.kth.se>
 
+	* src/drill.c; Exchanged the last fprintf(stderr, with
+	  GERB_COMPILE_ERROR.
+
 	* src/gerbv.c: Added swap of tooltips information too.
 
 2003-02-02  Stefan Petersen  <spe@stacken.kth.se>
